# rdap

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.local.json
docs/superpowers/plans/: 2026-06-24-object-methods.md
docs/superpowers/specs/: 2026-06-24-object-methods-design.md
man/: rdap.1
src/: client.rs  format.rs  lib.rs  lookup.rs  main.rs  pager.rs  search.rs  types.rs
tests/: integration.rs
