[package]
name = "rdap"
version = "0.1.0"
edition = "2021"
description = "A command-line RDAP client for looking up domains, nameservers, and entities"
license = "MIT"

[package.metadata.deb]
name = "norid-rdap"
maintainer = "Erik <erik@dengamle.no>"
copyright = "2026, Erik"
extended-description = "rdap is a command-line client for the Registration Data Access Protocol (RDAP). It supports domain, nameserver, and entity lookups, wildcard searches, RFC-8977 paging, RFC-8982 partial responses, and Norid registry extensions."
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    { source = "target/release/rdap", dest = "usr/bin/", mode = "755" },
    { source = "man/rdap.1", dest = "usr/share/man/man1/rdap.1", mode = "644" },
]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
url = "2"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["net"] }
